add ability to upload airports from web

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,5 +1,10 @@
 <p id="notice"><%= notice %></p>
 
+<%= form_with(url: :locations, local: true) do |form| %>
+  <%= form.file_field :location_db %>
+  <%= form.submit %>
+<% end %>
+
 <h1>Locations</h1>
 
 <table>
