--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,4 +3,22 @@
 <%= content_tag :div, id: "trip_lines", data: {trips: Flight.trips_lat_long} do %>
 <% end %>
 
+<div class='container mt-2 mb-2'>
+  <div class='row'>
+    <div class="col">
+      <h5><center>Are you a pilot who keeps a digital logbook? Want to make your own map of all your flights? Let me know!</center></h5>
+    </div>
+  </div>
+  <div class='row justify-content-center'>
+    <div class='col-4'>
+      <%= form_with(model: User.new, local: true) do |form| %>
+        <div class='form-inline'>
+          <%= form.email_field :email, placeholder: 'email', class: 'form-control mt-2' %>
+          <%= form.submit "Submit", class: 'btn btn-primary ml-lg-2 mt-2' %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
 <div id="mapid"></div>
