--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -3,15 +3,32 @@ $(document).ready(function(){
   var waypoints = $('#visited_waypoints').data('waypoints');
   var trips = $('#trip_lines').data('trips');
 
+  var waypointIcon = L.icon({
+    iconUrl: "<%= asset_path('waypoint.png') %>",
+
+    iconSize:     [50, 50], // size of the icon
+    iconAnchor:   [25, 25], // point of the icon which will correspond to marker's location
+    popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
+  });
+
+  var airportIcon = L.icon({
+    iconUrl: "<%= asset_path('airport.png') %>",
+
+    iconSize:     [50, 50],
+    iconAnchor:   [25, 25],
+    popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
+  });
+
   var mymap = L.map('mapid');
   var markers = [];
-  for (var key in locations) {
-    var marker = L.marker([locations[key][0], locations[key][1]], {title: key}).addTo(mymap);
-    markers.push(marker);
-  }
   for(var key in waypoints) {
-    var waypoint = L.circleMarker([waypoints[key][0], waypoints[key][1]], {title: key}).addTo(mymap);
+    var waypoint = L.marker([waypoints[key][0], waypoints[key][1]], {title: key, icon: waypointIcon}).addTo(mymap);
     markers.push(waypoint);
+  }
+  for (var key in locations) {
+    var pinCount = locations[key][1]
+    var marker = L.marker([locations[key][0][0], locations[key][0][1]], {title: key, opacity:0.4+(pinCount/100), icon: airportIcon}).addTo(mymap);
+    markers.push(marker);
   }
 
   for (var i = 0; i < trips.length; i++) {
@@ -20,7 +37,7 @@ $(document).ready(function(){
       for(var j = 0; j < trips[i].length; j++) {
         polylinePoints.push(trips[i][j]);
       }
-      var polyline = L.polyline(polylinePoints, {color:'#1E90FF'}).addTo(mymap);
+      var polyline = L.polyline(polylinePoints, {color:'#00E6F0', opacity:0.15}).addTo(mymap);
     }
   }
 
@@ -30,7 +47,7 @@ $(document).ready(function(){
   // var polyline = L.polyline([[51.5, -0.09],[51.6, -0.09]], {color: '#00FFFF'}).addTo(mymap);
 
   // MapBox Dark Map (Costs money after 50,000 impressions)
-    L.tileLayer('https://api.mapbox.com/styles/v1/mapbox/outdoors-v10/tiles/256/{z}/{x}/{y}?access_token={accessToken}', {
+    L.tileLayer('https://api.mapbox.com/styles/v1/ericavirtue/cj68n67su1iw02rnb9ee4s5c0/tiles/256/{z}/{x}/{y}?access_token={accessToken}', {
         attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
         maxZoom: 18,
         accessToken: 'pk.eyJ1IjoiYXJlbGVuZ2xpc2giLCJhIjoiY2l6ZzNrNHZ3MDB1cDMzb3dqdmh3emhjbSJ9.1WoDWsWNnIg-Wq8LPf1j-A'
