updated header styles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  // Custom bootstrap variables must be set or imported *before* bootstrap.
  @import "map";
  @import "bootstrap";
+ @import "bootstrap-overrides";
  @import "flights";
  @import "locations";
  @import "users";
