--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,21 +1,22 @@
- //
- // This is a manifest file that'll be compiled into application.css, which will include all the files
- // listed below.
- //
- // Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- // or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- //
- // You're free to add application-wide styles to this file and they'll appear at the bottom of the
- // compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- // files in this directory. Styles in this file should be added after the last require_* statement.
- // It is generally better to create a new file per style scope.
- //
- // 16px == 1rem so 16px*0.0625 = 1rem
- //
- // Custom bootstrap variables must be set or imported *before* bootstrap.
- @import "map";
- @import "bootstrap";
- @import "bootstrap-overrides";
- @import "flights";
- @import "locations";
- @import "users";
+//
+// This is a manifest file that'll be compiled into application.css, which will include all the files
+// listed below.
+//
+// Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+// or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
+//
+// You're free to add application-wide styles to this file and they'll appear at the bottom of the
+// compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+// files in this directory. Styles in this file should be added after the last require_* statement.
+// It is generally better to create a new file per style scope.
+//
+// 16px == 1rem so 16px*0.0625 = 1rem
+//
+// Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "map";
+@import "bootstrap";
+@import "bootstrap-overrides";
+@import "global";
+@import "flights";
+@import "locations";
+@import "users";
