--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,17 +8,22 @@
 <div class='container mt-2 mb-2'>
   <div class='row'>
     <div class="col">
-      <h6><center>Are you a pilot who keeps a digital logbook? Want to make your own map of all your flights? Let me know!</center></h6>
+      <h6><center>Are you a pilot who keeps a digital logbook? Want to make your own map of all your flights? Create an account!</center></h6>
     </div>
   </div>
   <div class='row justify-content-center'>
     <div class='col-4'>
-      <%= form_with(model: User.new, local: true) do |form| %>
-        <div class='form-inline'>
-          <%= form.email_field :email, placeholder: 'email', class: 'form-control mt-2' %>
-          <%= form.submit "Submit", class: 'btn btn-primary ml-lg-2 mt-2' %>
-        </div>
-      <% end %>
+      <div class='form-inline'>
+        <% if user_signed_in? %>
+          <li>
+            <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+          </li>
+        <% else %>
+          <li>
+            <%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
+          </li>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
