--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,19 +8,29 @@
 <div class='container mt-2 mb-2'>
   <div class='row'>
     <div class="col">
-      <h6><center>Are you a pilot who keeps a digital logbook? Want to make your own map of all your flights? Create an account!</center></h6>
+      <% if !user_signed_in? %>
+        <h6><center>Are you a pilot who keeps a digital logbook? Want to make your own map of all your flights? Create an account!</center></h6>
+      <% end %>
     </div>
   </div>
   <div class='row justify-content-center'>
-    <div class='col-4'>
+    <div class='col-6'>
       <div class='form-inline'>
         <% if user_signed_in? %>
           <li>
-            <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+            <%= link_to('Logout', destroy_user_session_path, method: :delete, class: 'btn btn-primary') %>
           </li>
         <% else %>
           <li>
-            <%= link_to 'Login', new_user_session_path, class: 'btn btn-primary' %>
+            <%= form_with(model: User, url: registration_path(:user), local: true) do |form| %>
+              <div class='form-inline'>
+                <%= form.email_field :email, placeholder: 'email', class: 'form-control' %>
+                <%= form.password_field :password, placeholder: 'password', class: 'form-control' %>
+                <%#= link_to "Forgot your password?", new_password_path(:user) %>
+                <%= form.submit 'Register', class: 'btn btn-primary' %>
+                Already have an account? <button data-toggle="modal" data-target="#loginModal">login</button>
+              </div>
+            <% end %>
           </li>
         <% end %>
       </div>
