--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,11 +8,18 @@
 <div class='container-fluid'>
   <div class='row'>
     <div class='col-2'>
-      <div class='col-12' id='sticky-sidebar'>
-        <%= current_user.email %>
+      <div class='col-12' id='user-sticky-sidebar'>
+        <%= @user.email %>
+
+        <% if @user == current_user %>
+          <%= form_with(url: :flights, local: true) do |form| %>
+            <%= form.file_field :logbook %>
+            <%= form.submit %>
+          <% end %>
+        <% end %>
       </div>
     </div>
-    <div class='col-10' id='main'>
+    <div class='col-10' id='user-main'>
       <div class='user-map' id='mapid'></div>
     </div>
   </div>
