--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -2,12 +2,12 @@
 
 <%= form_with(url: :flights, local: true) do |form| %>
   <%= form.file_field :logbook %>
-  <%= form.submit %>
+  <%= form.submit class:'btn btn-primary' %>
 <% end %>
 
 <h1>Flights</h1>
 
-<table>
+<table class='table table-inverse'>
   <thead>
     <tr>
       <th>Flight date</th>
@@ -36,7 +36,6 @@
         <td><%= flight.pic %></td>
         <td><%= flight.distance %></td>
         <td><%= link_to 'Show', flight %></td>
-        <td><%= link_to 'Edit', edit_flight_path(flight) %></td>
         <td><%= link_to 'Destroy', flight, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
@@ -44,5 +43,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New Flight', new_flight_path %>
