--- a/app/views/flights/show.html.erb
+++ b/app/views/flights/show.html.erb
@@ -12,12 +12,12 @@
 
 <p>
   <strong>From:</strong>
-  <%= @flight.from_id %>
+  <%= Location.find(@flight.from_id).identifier %>
 </p>
 
 <p>
   <strong>To:</strong>
-  <%= @flight.to_id %>
+  <%= Location.find(@flight.to_id).identifier %>
 </p>
 
 <p>
@@ -45,5 +45,4 @@
   <%= @flight.distance %>
 </p>
 
-<%= link_to 'Edit', edit_flight_path(@flight) %> |
 <%= link_to 'Back', flights_path %>
