--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,13 +9,13 @@
   <div class='row'>
     <div class='col-2'>
       <div class='col-12' id='user-sticky-sidebar'>
-        <%= @user.email %>
-
         <% if @user == current_user %>
           <%= form_with(url: :flights, local: true) do |form| %>
             <%= form.file_field :logbook %>
-            <%= form.submit %>
+            <%= form.submit class:'btn btn-primary' %>
           <% end %>
+
+          View your <%= link_to 'flights', flights_path %>
         <% end %>
       </div>
     </div>
