--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,4 +1,14 @@
+html, body {
+  height: 100%;
+  font-size: 16px;
+}
+
+html {
+  position: relative;
+}
+
 body {
+  font-family: 'Nunito', sans-serif;
   background-color: #191A1A;
 }
 
@@ -9,4 +19,12 @@ h6 {
 
 .sub-header {
   color: white;
+}
+
+.header-title {
+  color: white;
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: 900;
+  font-size: 1.5rem;
+  letter-spacing: 0.25rem;
 }
