--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,14 +7,27 @@
 
 <div class='container-fluid'>
   <div class='row'>
+    <div class='col-10'>
+      <div class='header-title mt-3 mb-3'>TRAVERSE</div>
+    </div>
+    <div class='col-2'>
+      <%= link_to('Logout', destroy_user_session_path, method: :delete, class: 'btn btn-primary float-right mt-3 mb-3') %>
+    </div>
+  </div>
+  <div class='row'>
     <div class='col-2'>
       <div class='col-12' id='user-sticky-sidebar'>
+        <div class=''>
+          <%= @user.name %>
+        </div>
+        <div class=''>
+          Joined <%= @user.created_at %>
+        </div>
         <% if @user == current_user %>
           <%= form_with(url: :flights, local: true) do |form| %>
             <%= form.file_field :logbook %>
             <%= form.submit class:'btn btn-primary' %>
           <% end %>
-
           View your <%= link_to 'flights', flights_path %>
         <% end %>
       </div>
