--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,32 +1,59 @@
-#user-main {
-  padding-right: 0;
-}
+#user-map {}
 
 .user-map {
   min-height: 100vh;
   min-width: 100%;
 }
 
-#flag {
-  width: 110px;
-  height: 56px;
-  padding-top: 15px;
-  position: relative;
-  background: red;
-  color: white;
-  font-size: 11px;
-  letter-spacing: 0.2em;
-  text-align: center;
-  text-transform: uppercase;
+#user-sticky-sidebar {
+  background-color: #343234;
 }
-#flag:after {
+
+#top-background-flag {
+  border-top: 2px solid #C2C2C2;
+  background: linear-gradient(
+    to bottom right,
+    #5DCAD3 50%,
+    transparent 50.5%
+  )
+  no-repeat bottom, /* bottom part */
+  linear-gradient(100deg, #5DCAD3, #5DCAD3) no-repeat top;
+  /* top portion */
+  padding-bottom: 3.5rem;
+  background-size: 100% 3rem, 100% calc(100% - 3rem)
+}
+
+#top-background-flag:after {
   content: "";
+  background-color: #C2C2C2;
+  height: 2px;
+  width: 101%;
   position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 0;
-  height: 0;
-  border-bottom: 13px solid #eee;
-  border-left: 55px solid transparent;
-  border-right: 55px solid transparent;
+  left: -2px;
+  bottom: 1.4rem;
+  transform: rotate(-7.6deg);
+}
+
+#mid-background-flag {
+  background-color: #5DCAD3;
+  height: 15rem;
+  -webkit-transform: skewY(8deg);
+  -moz-transform: skewY(8deg);
+  -ms-transform: skewY(8deg);
+  -o-transform: skewY(8deg);
+  transform: skewY(8deg);
+  border-top: 2px solid #C2C2C2;
+  border-bottom: 2px solid #C2C2C2;
+}
+
+#background-flag-text {
+  -webkit-transform: skewY(-8deg);
+  -moz-transform: skewY(-8deg);
+  -ms-transform: skewY(-8deg);
+  -o-transform: skewY(-8deg);
+  transform: skewY(-8deg);
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
