name is now required close #5 user now can't see home page when logged in. close #2

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -17,6 +17,14 @@ h6 {
   font-weight: 300;
 }
 
+.align-right {
+  text-align: right;
+}
+
+.align-center {
+  text-align: center;
+}
+
 .sub-header {
   color: white;
 }
@@ -48,7 +56,6 @@ h6 {
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 800;
   font-size: 1.5rem;
-  text-align: right;
 }
 
 .light-sub-text {
@@ -56,7 +63,6 @@ h6 {
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 200;
   font-size: 1.12rem;
-  text-align: right;
 }
 
 .remove-lr-padding {
