--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,13 +1,13 @@
 #user-map {}
 
 .user-map {
-  min-height: 100vh;
+  min-height: 100%;
   min-width: 100%;
 }
 
 #user-sticky-sidebar {
   background-color: #343234;
-  z-index: -2;
+  z-index: 0;
 }
 
 #top-background-flag {
