--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,27 +2,23 @@
 <html>
   <head>
     <title>LogbookViz</title>
-    <meta property="og:title" content="LogbookViz" />
+    <meta property="og:title" content="Traverse" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
     <meta property="og:image" content="<%= image_url "demo-img.png" %>" />
     <meta property="og:description" content="A visual logbook!" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="LogbookViz" />
+    <meta property="og:site_name" content="Traverse" />
     <%= csrf_meta_tags %>
     <%= favicon_link_tag 'favicon.ico' %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
-  integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
-  crossorigin=""/>
-    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
- integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
- crossorigin=""></script>
+    <%= render 'layouts/leaflet' %>
     <%= javascript_include_tag 'application' %>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,800,900&amp;subset=latin-ext" rel="stylesheet">
   </head>
 
   <body>
+    <%= render 'layouts/fb_messenger_btn' %>
     <%= render 'layouts/flash_messages' %>
     <%= yield %>
   </body>
