--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -9,25 +9,21 @@
   <div class='row'>
     <div class="col">
       <% if !user_signed_in? %>
-        <h6><center>Are you a pilot who keeps a digital logbook? Want to make your own map of all your flights? Create an account!</center></h6>
+        <p class='light-sub-text align-center'>Are you a pilot who keeps a digital logbook? Want to make your own map of all your flights? Create an account!</p>
       <% end %>
     </div>
   </div>
   <div class='row justify-content-center'>
-    <div class='col-6'>
+    <div class='col-8'>
       <div class='form-inline'>
-        <% if user_signed_in? %>
-            <%= link_to('Logout', destroy_user_session_path, method: :delete, class: 'btn btn-primary') %>
-        <% else %>
-            <%= form_with(model: User, url: registration_path(:user), local: true) do |form| %>
-              <div class='form-inline'>
-                <%= form.email_field :email, placeholder: 'email', class: 'form-control' %>
-                <%= form.password_field :password, placeholder: 'password', class: 'form-control' %>
-                <%#= link_to "Forgot your password?", new_password_path(:user) %>
-                <%= form.submit 'Register', class: 'btn btn-primary' %>
-              </div>
-            <% end %>
-            <p class='sub-header'> Already have an account? <a href="#" data-toggle='modal' data-target='#loginModal'>login</a></p>
+          <%= form_with model: User.new, local: true, url: user_registration_path do |form| %>
+            <div class='form-inline'>
+              <%= form.email_field :email, placeholder: 'email', class: 'form-control' %>
+              <%= form.text_field :name, placeholder: 'name', class: 'form-control' %>
+              <%= form.password_field :password, placeholder: 'password', class: 'form-control' %>
+              <%= form.submit 'Register', class: 'btn btn-primary' %>
+            </div>
+            <p class='light-sub-text'> Already have an account? <a href="#" data-toggle='modal' data-target='#loginModal'>login</a></p>
         <% end %>
       </div>
     </div>
