--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,10 +29,10 @@
       <div class='row'>
         <div class='col-12'>
           <div class='float-right mr-3'>
-            <div class='light-header'>
-              <%= @user.top_location.iso_region %>
+            <div class='light-header align-right'>
+              <%= @user.top_location.try(:iso_region) || 'No Flights' %>
             </div>
-            <div class='light-sub-text'>
+            <div class='light-sub-text align-right'>
               Top State/Region
             </div>
           </div>
@@ -41,10 +41,10 @@
       <div class='row mt-3'>
         <div class='col-12'>
           <div class='float-right mr-3'>
-            <div class='light-header'>
-              <%= @user.top_location.identifier %>
+            <div class='light-header align-right'>
+              <%= @user.top_location.try(:identifier) || 'No Flights' %>
             </div>
-            <div class='light-sub-text'>
+            <div class='light-sub-text align-right'>
               Top Airport
             </div>
           </div>
@@ -53,10 +53,10 @@
       <div class='row mt-3'>
         <div class='col-12'>
           <div class='float-right mr-3'>
-            <div class='light-header'>
-              <%= @user.top_aircraft %>
+            <div class='light-header align-right'>
+              <%= @user.top_aircraft || 'No Flights' %>
             </div>
-            <div class='light-sub-text'>
+            <div class='light-sub-text align-right'>
               Top Aircraft
             </div>
           </div>
@@ -70,7 +70,7 @@
               <div class='row mt-3'>
                 <div class='col-6'>
                   <div class='header-text'>
-                    <%= @user.flights.count %>
+                    <%= @user.flights.count || 'No Flights' %>
                   </div>
                   <div class='sub-text'>
                     Flights
@@ -107,13 +107,35 @@
           </div>
         </div>
       </div>
-      <%# if @user == current_user %>
-        <%#= form_with(url: :flights, local: true) do |form| %>
-          <%#= form.file_field :logbook %>
-          <%#= form.submit class:'btn btn-primary' %>
-        <%# end %>
-        <!-- View your <%#= link_to 'flights', flights_path %> -->
-      <%# end %>
+      <div class='row mt-5'>
+        <div class='col-12'>
+          <% if @user == current_user %>
+          <p class='light-sub-text align-center'>Upload your ForeFlight logbook file</p>
+            <div class='align-center'>
+              <%= form_with(url: :flights, local: true) do |form| %>
+                <%= form.file_field :logbook %>
+                <%= form.submit class:'btn btn-primary mt-3' %>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+      <div class='row mt-4 align-center'>
+        <div class='col-12'>
+          <p class='light-sub-text'>Manage your <%= link_to 'flights', flights_path %></p>
+        </div>
+      </div>
+      <div class='row mt-2 mb-2 align-center'>
+        <div class="col-12">
+          <p class='light-sub-text'>Feature requests? Questions?</p>
+          <div class="fb-messengermessageus"
+            messenger_app_id="720812044763701"
+            page_id="965418793603934"
+            color="blue"
+            size="xlarge" >
+          </div>
+        </div>
+      </div>
     </div>
     <div class='col-9 remove-lr-padding' id='user-map'>
       <div class='user-map' id='mapid'></div>
