basically finished. just need to add a mobile view for the side bar

--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -47,6 +47,7 @@ $(document).ready(function(){
 
     var placeMarks = new L.featureGroup(markers);
     mymap.fitBounds(placeMarks.getBounds().pad(0.1));
+    mymap.scrollWheelZoom.disable();
   }
 
   // MapBox Dark Map (Costs money after 50,000 impressions)
