--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
     </div>
   </div>
   <div class='row'>
-    <div class='col-3 remove-lr-padding' id='user-sticky-sidebar'>
+    <div class='col-md-3 col-12 remove-lr-padding' id='user-sticky-sidebar'>
       <div class='col-12 remove-lr-padding'>
         <div id='top-background-flag'>
           <div class='header-text pl-3 pt-4'>
@@ -137,7 +137,7 @@
         </div>
       </div>
     </div>
-    <div class='col-9 remove-lr-padding' id='user-map'>
+    <div class='col-md-9 col-12 remove-lr-padding' id='user-map'>
       <div class='user-map' id='mapid'></div>
     </div>
   </div>
