added bugsnag close #8

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -12,6 +12,12 @@ body {
   background-color: #191A1A;
 }
 
+a {
+  color: white;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 200;
+}
+
 h6 {
   color: white;
   font-weight: 300;
