--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,7 +1,7 @@
 #user-map {}
 
 .user-map {
-  min-height: 100vh;
+  min-height: 100%;
   min-width: 100%;
 }
 
@@ -57,4 +57,10 @@
   margin-left: auto;
   margin-right: auto;
   text-align: center;
+}
+
+@media (max-width: 768px) {
+  .user-map {
+    min-height: 60vh;
+  }
 }
