--- a/app/views/pages/_login_modal.html.erb
+++ b/app/views/pages/_login_modal.html.erb
@@ -18,6 +18,7 @@
           </div>
         </div>
         <div class="modal-footer">
+          <%= link_to "Forgot your password?", new_password_path(User), class: 'dark-link' %><br />
           <%= form.submit 'Login', class: 'btn btn-primary' %>
         </div>
       <% end %>
