trying removing hash from href for user login modal

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -23,7 +23,7 @@
               <%= form.password_field :password, placeholder: 'password', class: 'form-control' %>
               <%= form.submit 'Register', class: 'btn btn-primary' %>
             </div>
-            <p class='light-sub-text'> Already have an account? <a href="#" data-toggle='modal' data-target='#loginModal'>login</a></p>
+            <p class='light-sub-text'> Already have an account? <a href="" data-toggle='modal' data-target='#loginModal'>login</a></p>
         <% end %>
       </div>
     </div>
