--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -23,7 +23,9 @@
               <%= form.password_field :password, placeholder: 'password', class: 'form-control' %>
               <%= form.submit 'Register', class: 'btn btn-primary' %>
             </div>
-            <p class='light-sub-text'> Already have an account? <a href="" data-toggle='modal' data-target='#loginModal'>login</a></p>
+            <p class='light-sub-text'> Already have an account?
+              <!-- <a href="#" data-toggle='modal' data-target='#loginModal'>login</a></p> -->
+              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">login</button>
         <% end %>
       </div>
     </div>
