--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -24,8 +24,7 @@
               <%= form.submit 'Register', class: 'btn btn-primary' %>
             </div>
             <p class='light-sub-text'> Already have an account?
-              <!-- <a href="#" data-toggle='modal' data-target='#loginModal'>login</a></p> -->
-              <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">login</button>
+              <a href="#" data-toggle='modal' data-target='#loginModal'>login</a></p>
         <% end %>
       </div>
     </div>
