--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -11,7 +11,7 @@
         <div class="form">
           <%= f.label :password, 'New password', class: 'light-sub-text' %><br />
           <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+            <em class='light-sub-text'>(<%= @minimum_password_length %> characters minimum)</em><br />
           <% end %>
           <%= f.password_field :password, autofocus: true, autocomplete: "off", class: 'form-control' %>
           <%= f.label :password_confirmation, "Confirm new password", class: 'light-sub-text' %><br />
