add meta tag for mobile view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <meta property="og:description" content="A visual logbook!" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Traverse" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <%= csrf_meta_tags %>
     <%= favicon_link_tag 'favicon.ico' %>
     <%= javascript_include_tag 'application' %>
