switch traverse to arelplane

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 <div class='container-fluid'>
   <div class='row'>
     <div class='col-6'>
-      <div class='header-title mt-3 mb-3'>TRAVERSE</div>
+      <div class='header-title mt-3 mb-3'>ARELPLANE</div>
     </div>
     <div class='col-6'>
       <%= link_to('Logout', destroy_user_session_path, method: :delete, class: 'btn btn-primary float-right mt-3 mb-3') %>
