--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <title>LogbookViz</title>
-    <meta property="og:title" content="Traverse" />
+    <meta property="og:title" content="Arelplane" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
     <meta property="og:image" content="<%= image_url "demo-img.png" %>" />
     <meta property="og:description" content="A visual logbook!" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:site_name" content="Traverse" />
+    <meta property="og:site_name" content="Arelplane" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <%= csrf_meta_tags %>
     <%= favicon_link_tag 'favicon.ico' %>
