close #13. message now displayed while logbook uploading

--- a/app/assets/stylesheets/bootstrap-overrides.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.scss
@@ -8,6 +8,11 @@
   border-color: #00E6F0;
 }
 
+.btn-primary:disabled {
+  background-color: #00E6F0;
+  border-color: #00E6F0;
+}
+
 .container {
   padding-top: 5px;
   padding-bottom: 10px;
