--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>LogbookViz</title>
+    <title>Arelplane</title>
     <meta property="og:title" content="Arelplane" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
