mccPilotLog works now. Just waiting on icon, and need to change button colors

--- a/app/views/users/_logbook_upload_modal.html.erb
+++ b/app/views/users/_logbook_upload_modal.html.erb
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div class="modal fade" id="logbookUploadModal" tabindex="-1" role="dialog" aria-labelledby="logbookUpload" aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <div class="modal-content">
+    <div class="modal-content pb-2">
       <div class="modal-header">
         <h5 class="modal-title" id="logbookUpload">What logbook do you use?</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -32,7 +32,7 @@
         </div>
       </div>
       <%= render 'users/upload_forms/logtenpro' %>
-      <!-- <div class='row m-2 h-100'>
+      <div class='row m-2 h-100'>
         <div class="col-1">
           <%#= image_tag('mccPILOTLOG.png', height: '40', width: '40') %>
         </div>
@@ -43,7 +43,7 @@
           <button class='btn btn-primary float-right' id="mccpilotlog-lb">mccPILOTLOG</button>
         </div>
       </div>
-      <%#= render 'users/upload_forms/mccpilotlog' %> -->
+      <%= render 'users/upload_forms/mccpilotlog' %>
     </div>
   </div>
 </div>
