--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -80,6 +80,17 @@
   font-size: 1rem;
 }
 
+.provider-btn {
+  color: white;
+  width: 6.1rem;
+  background-color: #7F7F7F;
+  letter-spacing: 0.1rem;
+}
+
+.form-background {
+  background-color: #7F7F7F;
+}
+
 @media (max-width: 768px) {
   .user-map {
     min-height: 60vh;
