--- a/app/views/users/_logbook_upload_modal.html.erb
+++ b/app/views/users/_logbook_upload_modal.html.erb
@@ -8,39 +8,49 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class='row m-2 h-100'>
+      <div class='row ml-2 mr-md-2 mt-2 h-100'>
         <div class="col-1">
           <%= image_tag('foreFlight.png', height: '40', width: '40') %>
         </div>
         <div class="col-5 my-auto">
-          <div class="lb-provider-name pl-2">ForeFlight</div>
+          <div class="lb-provider-name pl-3 pl-md-2">ForeFlight</div>
         </div>
-        <div class="col-6 my-auto">
-          <button class='btn btn-primary float-right' id="foreflight-lb">ForeFlight</button>
+        <div class="col-5 col-md-6 my-auto">
+          <button class='btn float-right provider-btn' id="foreflight-lb">Select</button>
         </div>
       </div>
       <%= render 'users/upload_forms/foreflight' %>
-      <div class='row m-2 h-100'>
+      <div class="row ml-2 mr-2">
+        <div class="col-12">
+          <hr>
+        </div>
+      </div>
+      <div class='row ml-2 mr-md-2 h-100'>
         <div class="col-1">
           <%= image_tag('logtenpro.png', height: '40', width: '40') %>
         </div>
         <div class="col-5 my-auto">
-          <div class="lb-provider-name pl-2">LogTen Pro</div>
+          <div class="lb-provider-name pl-3 pl-md-2">LogTen Pro</div>
         </div>
-        <div class="col-6 my-auto">
-          <button class='btn btn-primary float-right' id="logtenpro-lb">LogTen Pro</button>
+        <div class="col-5 col-md-6 my-auto">
+          <button class='btn float-right provider-btn' id="logtenpro-lb">Select</button>
         </div>
       </div>
       <%= render 'users/upload_forms/logtenpro' %>
-      <div class='row m-2 h-100'>
+      <div class="row ml-2 mr-2">
+        <div class="col-12">
+          <hr>
+        </div>
+      </div>
+      <div class='row mb-2 ml-2 mr-md-2 h-100'>
         <div class="col-1">
-          <%#= image_tag('mccPILOTLOG.png', height: '40', width: '40') %>
+          <%= image_tag('mccPILOTLOG.png', height: '40', width: '40') %>
         </div>
         <div class="col-5 my-auto">
-          <div class="lb-provider-name pl-2">mccPILOTLOG</div>
+          <div class="lb-provider-name pl-3 pl-md-2">mccPILOTLOG</div>
         </div>
-        <div class="col-6 my-auto">
-          <button class='btn btn-primary float-right' id="mccpilotlog-lb">mccPILOTLOG</button>
+        <div class="col-5 col-md-6 my-auto">
+          <button class='btn float-right provider-btn' id="mccpilotlog-lb">Select</button>
         </div>
       </div>
       <%= render 'users/upload_forms/mccpilotlog' %>
