change popup to identifier #18. Also, some airports are showing up as waypoints. pretty much done #16.

--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -27,13 +27,13 @@ $(document).ready(function(){
     pointToLayer: function (feature, latlng) {
       if (feature.properties.feature_type === "airport") {
         return L.marker(latlng, {
-          title: feature.properties.popupContent,
+          title: feature.properties.identifier,
           opacity: Math.max((feature.properties.count/max_count) * 12, 0.3),
           icon: airportIcon
         });
       } else if (feature.properties.feature_type === "waypoint") {
         return L.marker(latlng, {
-          title: feature.properties.popupContent,
+          title: feature.properties.identifier,
           opacity: Math.max((feature.properties.count/max_count) * 12, 0.3),
           icon: waypointIcon});
       }
