--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
+<%= content_tag :div, id: "current_page", data: {page: @user.id} do %>
+<% end %>
+
 <div class='container-fluid'>
   <div class='row'>
     <div class='col-md-3 col-12 d-none d-md-block remove-lr-padding' id='user-sticky-sidebar'>
