--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,6 @@
+<%= content_tag :div, id: "current_page", data: {page: "homepage"} do %>
+<% end %>
+
 <div class='container mt-2 mb-2'>
   <div class='row'>
     <div class="col">
