--- a/app/assets/javascripts/map.js.erb
+++ b/app/assets/javascripts/map.js.erb
@@ -1,6 +1,6 @@
 $(document).ready(function(){
   var whichPage = $('#current_page').data('page');
-  var basePath = window.location.protocol + "//" + window.location.host
+  var basePath = window.location.protocol + "//" + window.location.host;
 
   var waypointIcon = L.icon({
     iconUrl: "<%= asset_path('waypoint.png') %>",
