--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Arelplane</title>
+    <title><%= content_for?(:title) ? content_for(:title) : 'Arelplane' %></title>
     <meta property="og:title" content="Arelplane" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="<%= request.original_url %>" />
@@ -14,13 +14,14 @@
     <%= favicon_link_tag 'favicon.ico' %>
     <%= javascript_include_tag 'application' %>
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= render 'layouts/leaflet' %>
+    <%= render 'vendors/leaflet' %>
+    <%= render 'vendors/fb_pixel' %>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,800,900&amp;subset=latin-ext" rel="stylesheet">
   </head>
 
   <body>
     <%= render 'layouts/navbar' %>
-    <%= render 'layouts/fb_messenger_btn' %>
+    <%= render 'vendors/fb_messenger_btn' %>
     <%= render 'layouts/flash_messages' %>
     <%= yield %>
     <%= render 'pages/login_modal' %>
