--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
     <ul class="navbar-nav">
       <% if current_user %>
         <li class="nav-item active">
-          <button href="#" data-toggle='modal' data-target='#logbookUploadModal' class='btn btn-primary'>Upload Logbook</button>
+          <button href="#" data-toggle='modal' data-target='#logbookUploadModal' class='btn btn-primary'>Add Flights</button>
         </li>
       <% else %>
         <li class="nav-item active">
