--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -1,62 +1,63 @@
 <%= form_with(model: flight, local: true) do |form| %>
   <% if flight.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(flight.errors.count, "error") %> prohibited this flight from being saved:</h2>
-
-      <ul>
-      <% flight.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
+    <% flight.errors.full_messages.each do |message| %>
+      <div class="alert alert-danger" role="alert">
+        <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span>
+          <span class="sr-only">Close</span>
+        </button>
+        <%= message %>
+      </div>
+    <% end %>
   <% end %>
 
-  <div class="field">
-    <%= form.label :flight_date %>
-    <%= form.datetime_select :flight_date, id: :flight_flight_date %>
-  </div>
+  <div class="form">
+    <div class="mb-3">
+      <%= form.label :flight_date, class: 'light-sub-text' %><br />
+      <%= form.datetime_select :flight_date, id: :flight_flight_date %><br />
+    </div>
 
-  <div class="field">
-    <%= form.label :aircraft_id %>
-    <%= form.text_field :aircraft_id, id: :flight_aircraft_id %>
-  </div>
+    <div class="mb-3">
+      <%= form.label :aircraft_id, 'Aircraft Identifier, e.g. N17AV', class: 'light-sub-text' %><br />
+      <%= form.text_field :aircraft_id, id: :flight_aircraft_id, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= form.label :from_airport %>
-    <%= form.collection_select 'locations', Location.all, :id, :identifier, { include_blank: true} %>
-  </div>
+    <div class="mb-3">
+      <%= form.label :from_airport, 'Departure Airport (ICAO Code)', class: 'light-sub-text' %><br />
+      <%= form.collection_select :from_id, Location.order(:identifier).page, :id, :identifier, { include_blank: true}, class: 'airport_lookup', style: 'width: 100%;' %>
+    </div>
 
-  <div class="field">
-    <%= form.label :to_airport %>
-    <%= form.number_field :to_id, id: :flight_to_id %>
-  </div>
+    <div class="mb-3">
+      <%= form.label :to_airport, 'Arrival Airport (ICAO Code)', class: 'light-sub-text' %><br />
+      <%= form.collection_select :to_id, Location.order(:identifier).page, :id, :identifier, { include_blank: true}, class: 'airport_lookup', style: 'width: 100%;' %>
+    </div>
 
-  <div class="field">
-    <%= form.label :time_out %>
-    <%= form.text_field :time_out, id: :flight_time_out %>
-  </div>
+    <div class="mb-3">
+      <%= form.label :time_out, 'Time Out', class: 'light-sub-text' %><br />
+      <%= form.text_field :time_out, id: :flight_time_out, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= form.label :time_in %>
-    <%= form.text_field :time_in, id: :flight_time_in %>
-  </div>
+    <div class="mb-3">
+      <%= form.label :time_in, 'Time In', class: 'light-sub-text' %><br />
+      <%= form.text_field :time_in, id: :flight_time_in, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= form.label :total_time %>
-    <%= form.text_field :total_time, id: :flight_total_time %>
-  </div>
+    <div class="mb-3">
+      <%= form.label :total_time, 'Total Time (hours) e.g. 1.5', class: 'light-sub-text' %><br />
+      <%= form.number_field :total_time, id: :flight_total_time, class: 'form-control', step: 0.1 %>
+    </div>
 
-  <div class="field">
-    <%= form.label :pic %>
-    <%= form.text_field :pic, id: :flight_pic %>
-  </div>
+    <div class="mb-3">
+      <%= form.label :pic, 'PIC (hours)', class: 'light-sub-text' %><br />
+      <%= form.number_field :pic, id: :flight_pic, class: 'form-control', step: 0.1 %>
+    </div>
 
-  <div class="field">
-    <%= form.label :distance %>
-    <%= form.text_field :distance, id: :flight_distance %>
+    <div class="mb-3">
+      <%= form.label :distance, 'Distance (nautical miles)', class: 'light-sub-text' %><br />
+      <%= form.number_field :distance, id: :flight_distance, class: 'form-control', step: 0.1 %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: 'btn btn-primary mt-2' %>
   </div>
 <% end %>
