--- a/app/views/flights/new.html.erb
+++ b/app/views/flights/new.html.erb
@@ -1,5 +1,17 @@
-<h1>New Flight</h1>
+<%= title "Arelplane | New Flight" %>
 
-<%= render 'form', flight: @flight %>
+<div class='container-fluid'>
+  <div class='row'>
+    <div class='col-4'></div>
+    <div class='col-4'>
+      <p class='light-header'>New Flight</p>
 
-<%= link_to 'Back', flights_path %>
+      <%= render 'form', flight: @flight %>
+
+      <div class="actions">
+        <%= link_to "Back", :back %>
+      </div>
+    </div>
+    <div class='col-4'></div>
+  </div>
+</div>
