--- a/app/views/users/_logbook_upload_modal.html.erb
+++ b/app/views/users/_logbook_upload_modal.html.erb
@@ -3,7 +3,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content pb-2">
       <div class="modal-header">
-        <h5 class="modal-title" id="logbookUpload">What logbook do you use?</h5>
+        <h5 class="modal-title" id="logbookUpload">Upload a logbook file, or add flights manually</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -42,7 +42,7 @@
           <hr>
         </div>
       </div>
-      <div class='row mb-2 ml-2 mr-md-2 h-100'>
+      <div class='row ml-2 mr-md-2 h-100'>
         <div class="col-1">
           <%= image_tag('mccPILOTLOG.png', height: '40', width: '40') %>
         </div>
@@ -54,6 +54,24 @@
         </div>
       </div>
       <%= render 'users/upload_forms/mccpilotlog' %>
+      <div class="row ml-2 mr-2">
+        <div class="col-12">
+          <hr>
+        </div>
+      </div>
+      <div class='row mb-2 ml-2 mr-md-2 h-100'>
+        <div class="col-1">
+          <%= image_tag('arelplane.png', height: '40', width: '40') %>
+        </div>
+        <div class="col-5 my-auto">
+          <div class="lb-provider-name pl-3 pl-md-2">
+            Add Flights Manually
+          </div>
+        </div>
+        <div class="col-5 col-md-6 my-auto">
+          <%= link_to 'Select', new_flight_path, class: 'btn float-right provider-btn' %>
+        </div>
+      </div>
     </div>
   </div>
 </div>
