--- a/app/views/users/_side_bar.html.erb
+++ b/app/views/users/_side_bar.html.erb
@@ -2,9 +2,11 @@
   <div id='top-background-flag'>
     <div class='header-text pl-3 pt-4'>
       <%= @user.name %>
-      <%= link_to image_tag('settings.png', height: '23', width: '23'), edit_user_registration_path, class: 'ml-2' %>
+      <% if current_user == @user %>
+        <%= link_to image_tag('settings.png', height: '23', width: '23'), edit_user_registration_path, class: 'ml-2' %>
+      <% end %>
     </div>
-    <div class='sub-text pl-3'>
+    <div class='sub-text pl-3 mb-5'>
       Joined <%= @user.created_at.strftime('%B %e, %Y') %>
     </div>
   </div>
