--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -30,6 +30,7 @@
         <td><%= flight.pic %></td>
         <td><%= flight.distance %></td>
         <td><%= link_to 'Destroy', flight, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <!-- <td><%#= link_to 'Edit', edit_flight_path(flight) %></td> -->
       </tr>
       <% if !flight.waypoints.empty? %>
         <thead>
